# config-rs

./: .editorconfig  .gitlint  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  README.md  Settings.toml  deny.toml  external-types.toml
.builds/: debian.yml
.github/workflows/: coverage.yml  cron.yml  deny.yml  external-types.yml  fixupmerge.yml  gitlint.yml  msrv.yml  test.yml
examples/: static_env.rs
examples/async_source/: main.rs
examples/basic/: Cargo.toml
examples/basic-file/: Cargo.toml
examples/basic-file/src/: main.rs
examples/basic/src/: main.rs
examples/custom_file_format/: main.rs
examples/custom_file_format/files/: private.pem  public.pem
examples/custom_format/: main.rs
examples/custom_str_format/: main.rs
examples/env-list/: main.rs
examples/env_injection/: Cargo.toml  Settings.toml
examples/env_injection/src/: main.rs
examples/etcd/: Cargo.toml
examples/etcd/src/: main.rs
examples/file-json/: Cargo.toml  Settings.json
examples/file-json/src/: main.rs
examples/file-toml/: Cargo.toml  Settings.toml
examples/file-toml/src/: main.rs
examples/file-yaml/: Cargo.toml  Settings.yaml
examples/file-yaml/src/: main.rs
examples/glob/: Cargo.toml  main.rs
examples/glob/src/: main.rs
examples/global/: Cargo.toml  main.rs
examples/global/src/: main.rs
examples/hierarchical-env/: Cargo.toml  main.rs  settings.rs
examples/hierarchical-env/config/: default.toml  development.toml  production.toml
examples/hierarchical-env/src/: main.rs  settings.rs
examples/pattern/: Cargo.toml
examples/pattern/conf/: 05-some.yml  99-extra.json
examples/pattern/src/: main.rs
examples/simple/: Cargo.toml  Settings.toml  main.rs
examples/simple/src/: main.rs
examples/watch/: Cargo.toml  Settings.toml  main.rs
examples/watch/src/: main.rs
lib/: Cargo.toml
lib/src/: config.rs  de.rs  error.rs  lib.rs  source.rs  value.rs
lib/src/file/format/: mod.rs
lib/src/file/source/: mod.rs
lib/src/path/: mod.rs  parser.rs
src/: accessor.rs  builder.rs  config.rs  de.rs  description.rs  env.rs  error.rs  file.rs  format.rs  lib.rs  main.rs  map.rs  path.rs  ser.rs  shuttle_secret_store.rs  source.rs  value.rs
src/config/: builder.rs  config.rs  error.rs  mod.rs
src/element/: json.rs  mod.rs  toml.rs
src/file/: extension.rs  json.rs  mod.rs  nil.rs  toml.rs  yaml.rs
src/file/format/: dhall.rs  gura.rs  hjson.rs  hocon.rs  ini.rs  json.rs  json5.rs  jsonc.rs  mod.rs  ron.rs  toml.rs  yaml.rs
src/file/source/: file.rs  mod.rs  remote.rs  string.rs
src/object/: mod.rs
src/path/: mod.rs  parser.rs
src/remote/: etcd.rs  mod.rs
src/source/: format.rs  mod.rs  string.rs
tests/: Settings-enum-test.json  Settings-enum-test.json5  Settings-enum-test.jsonc  Settings-enum-test.ron  Settings-enum-test.toml  Settings-enum-test.ura  Settings-enum-test.yaml  Settings-invalid.json5  Settings-invalid.ron  Settings-upper-struct.toml  Settings-with-envs.ini  Settings-with-envs.json  Settings-with-envs.toml  Settings-with-envs.yaml  Settings-with-invalid-envs.ini  Settings-with-invalid-envs.json  Settings-with-invalid-envs.toml  Settings-with-invalid-envs.yaml  Settings.conf  Settings.dhall  Settings.hjson  Settings.ini  Settings.json  Settings.json5  Settings.jsonc  Settings.ron  Settings.toml  Settings.ura  Settings.yaml  all.env  async_builder.rs  config_defaults.rs  datetime.rs  defaults.rs  empty.rs  env.rs  errors.rs  file.rs  file_dhall.rs  file_gura.rs  (+32 more)
tests/legacy/: datetime.rs  env.rs  errors.rs  file.rs  file_hjson.rs  file_ini.rs  file_json.rs  file_ron.rs  file_toml.rs  file_yaml.rs  get.rs  merge.rs  mod.rs  set.rs
tests/types/: i64.toml
