[package]
name = "config"
version = "0.13.4"
description = "Layered configuration system for Rust applications."
homepage = "https://github.com/mehcode/config-rs"
repository = "https://github.com/mehcode/config-rs"
readme = "README.md"
keywords = ["config", "configuration", "settings", "env", "environment"]
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
categories = ["config"]
license = "MIT/Apache-2.0"
edition = "2018"
rust-version = "1.56.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["toml", "json", "yaml", "ini", "ron", "json5"]
json = ["serde_json"]
yaml = ["yaml-rust"]
ini = ["rust-ini"]
json5 = ["json5_rs"]
preserve_order = ["indexmap", "toml/preserve_order", "serde_json/preserve_order", "ron/indexmap"]

[dependencies]
async-trait = "0.1.2"
lazy_static = "1.4"
serde = "1.0.99"
nom = "7"

toml = { version = "0.5", optional = true }
serde_json = { version = "1.0.0", optional = true }
yaml-rust = { version = "0.4", optional = true }
rust-ini = { version = "0.18", optional = true }
ron = { version = "0.7", optional = true }
json5_rs = { version = "0.4", optional = true, package = "json5" }
indexmap = { version = "1.7.0", features = ["serde-1"], optional = true}
pathdiff = "0.2"

[dev-dependencies]
float-cmp = "0.9"

# tests/legacy (available in serde via `features = ["derive"]` since 1.0.103)
serde_derive = "1.0.99"

# tests/datetime.rs + tests/legacy/datetime.rs
chrono = { version = "0.4.23", features = ["serde"] }

# examples/async_source
warp = "=0.3.5"
futures = "0.3"
reqwest = "0.11"
# Additionally tests/async_builder.rs
tokio = { version = "1.13", features = ["rt-multi-thread", "macros"]}

# examples/glob
glob = "0.3"
# examples/watch
notify = "4.0.0"
# tests/env.rs
temp-env = "0.2.0"
