[package]
name = "config"
version = "0.14.0"
description = "Layered configuration system for Rust applications."
homepage = "https://github.com/mehcode/config-rs"
repository = "https://github.com/mehcode/config-rs"
readme = "README.md"
keywords = ["config", "configuration", "settings", "env", "environment"]
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
categories = ["config"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["toml", "json", "yaml", "ini", "ron", "json5", "convert-case", "async"]
json = ["serde_json"]
yaml = ["yaml-rust2"]
ini = ["rust-ini"]
json5 = ["json5_rs", "serde/derive"]
convert-case = ["convert_case"]
preserve_order = ["indexmap", "toml?/preserve_order", "serde_json?/preserve_order", "ron?/indexmap"]
async = ["async-trait"]

[dependencies]
lazy_static = "1.4"
serde = "1.0"
nom = "7"
encoding_rs_io = "0.1"

async-trait = { version = "0.1", optional = true }
toml = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
yaml-rust2 = { version = "0.8", optional = true }
rust-ini = { version = "0.20", optional = true }
ron = { version = "0.8", optional = true }
json5_rs = { version = "0.4", optional = true, package = "json5" }
indexmap = { version = "2.2", features = ["serde"], optional = true }
convert_case = { version = "0.6", optional = true }
pathdiff = "0.2"

[dev-dependencies]
serde_derive = "1.0"
float-cmp = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"]}
warp = "0.3"
futures = "0.3"
reqwest = "0.11"

glob = "0.3"
notify = "6.0"
temp-env = "0.3"
log = { version = "0.4", features = ["serde"] }
